--- a/src/components/style.css
+++ b/src/components/style.css
@@ -20,7 +20,7 @@ h1,h4{
     text-align: center;
 }
 .main{
-    background-image: url("bg1.jpg");
+    /* background-image: url("bg1.jpg"); */
 }
 
 ul {
